--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <footer>
         <div class="container">
-            <p><i class="fas fa-envelope"></i> jvEcodev  55+ (41) 988734741</p>
+            <p id="footer"> jvEcodev  55+ (41) 988734741</p>
         </div>
     </footer>
 </body>
